ops/kubeconfigs/game-engine-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-engine
  template:
    metadata:
      labels:
        app: game-engine
    spec:
      containers:
        - name: game-engine
          image: 'gcr.io/nth-segment-264718/game-engine:fad641a'
          readinessProbe:
            httpGet:
              path: /health
              port: 8888
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - name: ws-port
              containerPort: 8888
