ops/kubeconfigs/game-engine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-engine
spec:
  type: LoadBalancer
  selector:
    app: game-engine
  ports:
    - name: ws-control
      port: 8888
      targetPort: ws-control
    - name: ws-player
      port: 8889
      targetPort: ws-player
